--- a/public/index.html
+++ b/public/index.html
@@ -193,10 +193,11 @@
             <section class="labels-container">
                 <button class="add">add label</button>
                 <form class="add-label-form is-flex is-hidden">
-                    <input type="text" placeholder="image location" name="img-location">
-                    <input type="text" placeholder="name" name="label-name">
-                    <input type="text" placeholder="hq location" name="hq-location">
-                    <input type="submit" value="Add Label">
+                    <!-- <input class="image-loc" type="text" placeholder="image location" name="img-location">
+                    <input class="homepage" type="text" placeholder="homepage url" name="homepage">
+                    <input class="label-name" type="text" placeholder="name" name="label-name">
+                    <input class="location" type="text" placeholder="hq location" name="hq-location">
+                    <input type="submit" value="Add Label"> -->
                     <button class="cancel">cancel</button>
                 </form>
                 <ul class="labels">
@@ -209,7 +210,7 @@
             <li>
                 <div class="label-item is-flex">
                     <img src="{{image}}" alt="{{name}}">
-                    <div class="details is-flex">
+                    <div class="details is-flex" data-id="{{id}}">
                         <h3>{{name}}</h3>
                         <p>{{location}}</p>
                         <div class="actions">
